<resources>
    <string name="app_name">KawaVAS</string>
    <string name="confirmation_fragment_label">Confirmation Label</string>
    <string name="main_fragment_label">Confirmation Label</string>
    <string name="new_order_fragment_label">Confirmation Label</string>
    <string name="cart_fragment_label">Cart Label</string>
    <string name="details_fragment_label">Details Label</string>
    <string name="confirmation_pay_now">Zapłać Teraz</string>
    <string name="confirmation_pay_later">Zapłać przy odbiorze</string>
    <string name="new_order">Nowe zamówienie</string>
    <string name="accept">Potwierdź</string>
    <string name="checkout">Przejdź do podsumowania</string>
    <string name="success">Sukces!</string>
    <string name="success_description">Twoje zamówienie zostało złożone i czeka na potwierdzenie</string>
    <string name="success_fragment_button">OK</string>
</resources>