<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainScreenFragment">

    <fragment
        android:id="@+id/confirmationFragment"
        android:name="pl.teamhandicap.but.screens.ConfirmationFragment"
        android:label="@string/confirmation_fragment_label"
        tools:layout="@layout/fragment_confirmation_layout">

        <argument
            android:name="orderConfirmation"
            app:argType="pl.teamhandicap.but.screens.OrderConfirmationData" />

    </fragment>

    <fragment
        android:id="@+id/mainScreenFragment"
        android:name="pl.teamhandicap.but.screens.MainScreenFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main_layout">
        <action
            android:id="@+id/newOrder"
            app:destination="@id/newOrderFragment" />
        <action
            android:id="@+id/pickUp"
            app:destination="@id/pickupFragment" />
        <action
            android:id="@+id/action_mainScreenFragment_to_confirmationFragment"
            app:destination="@id/confirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/newOrderFragment"
        android:name="pl.teamhandicap.but.screens.NewOrderFragment"
        android:label="@string/new_order_fragment_label"
        tools:layout="@layout/fragment_new_order">
        <action
            android:id="@+id/showCart"
            app:destination="@id/cartDialog" />
        <action
            android:id="@+id/selectProduct"
            app:destination="@id/detailsDialog" />
    </fragment>

    <dialog
        android:id="@+id/cartDialog"
        android:name="pl.teamhandicap.but.screens.CartBottomSheetFragment"
        android:label="@string/cart_fragment_label"
        tools:layout="@layout/fragment_cart_bottom_sheet">
        <action
            android:id="@+id/confirmOrder"
            app:destination="@id/confirmationFragment" />
    </dialog>

    <dialog
        android:id="@+id/detailsDialog"
        android:name="pl.teamhandicap.but.screens.ProductDetailsDialogFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="productId"
            app:argType="integer"
            app:nullable="false" />
    </dialog>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="pl.teamhandicap.but.screens.PickupFragment"
        android:label="PickupFragment">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>

</navigation>